--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "haushaltshilfe"
   ],
   "author": "Luzia Gunzenhauser",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/mongodb": "^3.5.20",
+    "mongodb": "^3.5.8"
+  }
 }
